--- a/index.html
+++ b/index.html
@@ -4857,5 +4857,141 @@ document.getElementById('rsTabReal').onclick = (e)=>{ e.target.classList.add('ac
 })();
 </script>
 
+
+<script>
+// === GW PATCH: Semana por filtro y duración en minutos ===
+(function(){
+  // 1) Semana por defecto = filtro principal (fSemana) si 1..4
+  const _open = window.openCallModal;
+  window.openCallModal = function(){
+    if(_open) _open();
+    try{
+      const fw = (document.getElementById('fSemana')||{}).value;
+      if(fw && ['1','2','3','4'].includes(String(fw))) {
+        const s = document.getElementById('callSemana');
+        if(s) s.value = String(fw);
+      }
+    }catch(e){ console.warn(e); }
+  };
+
+  // 2) Cambiar etiqueta a "Duración (min)"
+  document.addEventListener('DOMContentLoaded', function(){
+    try{
+      const inp = document.getElementById('callDuracion');
+      if(inp){
+        const lbl = inp.parentElement.querySelector('label');
+        if(lbl) lbl.textContent = 'Duración (min)';
+        if(!inp.step) inp.step = '1';
+        if(!inp.min) inp.min = '0';
+      }
+    }catch(e){}
+  });
+
+  // 3) Guardar: convertir minutos -> segundos antes de llamar a la función original
+  const _save = window.saveCallRecord;
+  window.saveCallRecord = function(){
+    const inp = document.getElementById('callDuracion');
+    let oldVal = null;
+    if(inp){
+      const mins = Number(inp.value||0);
+      oldVal = inp.value;
+      inp.value = String(Math.round(mins*60)); // original guarda en duracion_seg
+    }
+    try{ if(_save) return _save(); }
+    finally{ if(inp && oldVal!=null) inp.value = oldVal; }
+  };
+
+  // 4) Reporte: mostrar duración en MINUTOS si existe o convertir desde seg.
+  const _renderRep = window.renderReporte;
+  window.renderReporte = function(){
+    if(_renderRep) _renderRep();
+    try{
+      const ths = document.querySelectorAll('#repTbl thead th');
+      ths.forEach(th => { if(/duraci/i.test(th.textContent)) th.textContent = 'Duración (min)'; });
+      // Reprocesar filas para mostrar minutos (si los datos son segundos)
+      const rows = document.querySelectorAll('#repTbl tbody tr');
+      // buscar índice de la columna de duración
+      let durIdx = -1;
+      ths.forEach((th,i)=>{ if(/duraci/i.test(th.textContent)) durIdx=i; });
+      if(durIdx>=0){
+        rows.forEach(tr=>{
+          const td = tr.children[durIdx];
+          if(td){
+            const n = Number(td.textContent.replace(',', '.'));
+            if(!isNaN(n) && n>0 && n>10){ // si parecen segundos, convertir a min
+              td.textContent = Math.round(n/60);
+            }
+          }
+        });
+      }
+    }catch(e){ console.warn(e); }
+  };
+})();
+</script>
+
+
+<script>
+// === GW PATCH: Semana constante (no depende de fecha) ===
+(function(){
+  // En el modal, fijamos N° Semana así:
+  // 1) Si el filtro principal 'fSemana' tiene 1..4 → usarlo
+  // 2) Si no, usar la semana del cliente seleccionado desde STATE.joined (si existe)
+  // 3) Nunca calcular por fecha
+  const _open = window.openCallModal;
+  window.openCallModal = function(){
+    if(_open) _open();
+    try{
+      const s = document.getElementById('callSemana');
+      if(!s) return;
+      const fw = (document.getElementById('fSemana')||{}).value;
+      if(fw && ['1','2','3','4'].includes(String(fw))) {
+        s.value = String(fw);
+        return;
+      }
+      // tomar del cliente seleccionado (join con calendario)
+      if(window.STATE && STATE.selected && typeof STATE.selected.semana !== 'undefined'){
+        const sem = String(STATE.selected.semana||'').trim();
+        if(['1','2','3','4'].includes(sem)) s.value = sem;
+      }
+    }catch(e){ console.warn('set semana default', e); }
+  };
+})();
+</script>
+
+
+<script>
+// === GW PATCH: N° Semana -> opciones [Seleccionar,1,2,3,4] y default 'Seleccionar' ===
+(function(){
+  function setSemanaOptionsDefault() {
+    var s = document.getElementById('callSemana');
+    if(!s) return;
+    // Reescribir opciones
+    s.innerHTML = '';
+    var opts = [
+      {v:'', t:'Seleccionar'},
+      {v:'1', t:'1'}, {v:'2', t:'2'}, {v:'3', t:'3'}, {v:'4', t:'4'}
+    ];
+    opts.forEach(function(o){
+      var op = document.createElement('option');
+      op.value = o.v; op.textContent = o.t;
+      s.appendChild(op);
+    });
+    s.value = ''; // default Seleccionar
+  }
+
+  // Al abrir el modal, siempre dejar 'Seleccionar'
+  var _openCallModal = window.openCallModal;
+  window.openCallModal = function(){
+    if(_openCallModal) _openCallModal();
+    try{ setSemanaOptionsDefault(); }catch(e){ console.warn(e); }
+  };
+
+  // También al cargar la app por si el modal ya estuviera en DOM
+  document.addEventListener('DOMContentLoaded', function(){
+    try{ setSemanaOptionsDefault(); }catch(_){}
+  });
+})();
+</script>
+
 </body>
 </html>
