--- a/index.html
+++ b/index.html
@@ -5242,5 +5242,30 @@ r selects antes de abrir
 })();
 </script>
 
+
+<script>
+document.addEventListener('DOMContentLoaded', function(){
+  var b = document.getElementById('btnLogin');
+  if(b && !b.__fixed){
+    b.__fixed = true;
+    b.addEventListener('click', function(ev){
+      ev.preventDefault();
+      if(typeof doLogin === 'function'){ doLogin(); return; }
+      // fallback demo
+      var u = (document.getElementById('loginUser')||{}).value||'';
+      var p = (document.getElementById('loginPass')||{}).value||'';
+      if(!u) u = 'demo';
+      if(p === '1234' || (u==='demo' && !p)){
+        try{
+          var lg = document.getElementById('login'); if(lg) lg.style.display='none';
+          var ap = document.getElementById('app'); if(ap) ap.classList.remove('hidden');
+        }catch(e){ console.warn(e); }
+      } else {
+        alert('Usuario o contraseña inválidos. Tip: demo / 1234');
+      }
+    }, true);
+  }
+});
+</script>
 </body>
 </html>
